--- a/note-change/ocp-4-13-release-notes.html
+++ b/note-change/ocp-4-13-release-notes.html
@@ -37179,6 +37179,7 @@
 <li><a href="#ocp-4-13-oc">OpenShift CLI (oc)</a></li>
 <li><a href="#ocp-4-13-ibm-z">IBM zSystems and IBM&#174; LinuxONE</a></li>
 <li><a href="#ocp-4-13-ibm-power">IBM Power</a></li>
+<li><a href="#ocp-4-13-images">Images</a></li>
 <li><a href="#ocp-4-13-security">Security and compliance</a></li>
 <li><a href="#ocp-4-13-networking">Networking</a></li>
 <li><a href="#ocp-4-13-storage">Storage</a></li>
@@ -37732,12 +37733,6 @@ OpenShift Container Platform 4.13.
 </div>
 </div>
 <div class="sect3">
-<h4 id="ocp-4-13-manifest-list-support"><a class="anchor" href="#ocp-4-13-manifest-list-support"></a>Support for manifest listed images on image streams</h4>
-<div class="paragraph">
-<p>With OpenShift Container Platform Branch Build, support for manifest listed images on image streams is now generally available.</p>
-</div>
-</div>
-<div class="sect3">
 <h4 id="ocp-4-13-import-image"><a class="anchor" href="#ocp-4-13-import-image"></a>Importing manifests with the OpenShift CLI (oc)</h4>
 <div class="paragraph">
 <p>With OpenShift Container Platform Branch Build, a new <code>oc</code> command line interface (CLI) flag, <code>--import-mode</code>, has been added to the following <code>oc</code> commands:</p>
@@ -38278,6 +38273,15 @@ OpenShift Container Platform 4.13.
 </tr>
 </tbody>
 </table>
+</div>
+<div class="sect2">
+<h3 id="ocp-4-13-images"><a class="anchor" href="#ocp-4-13-images"></a>Images</h3>
+<div class="sect3">
+<h4 id="ocp-4-13-manifest-list-support"><a class="anchor" href="#ocp-4-13-manifest-list-support"></a>Support for manifest listed images on image streams</h4>
+<div class="paragraph">
+<p>With OpenShift Container Platform Branch Build, support for manifest listed images on image streams is now generally available.</p>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="ocp-4-13-security"><a class="anchor" href="#ocp-4-13-security"></a>Security and compliance</h3>
